update swagger info for user and passwd params
