# employee-service/docs/swagger.json
@@ -268,21 +268,14 @@
                         "type": "string",
                         "description": "Password",
                         "name": "password",
-                        "in": "query",
+                        "in": "formData",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "Username",
                         "name": "username",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Grant type",
-                        "name": "grant_type",
-                        "in": "path",
+                        "in": "formData",
                         "required": true
                     }
                 ],
